[project]
name = "kerchunk"
description = "Functions to make reference descriptions for ReferenceFileSystem"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
license = {text = "MIT"}
authors = [
  {name = "Martin Durant", email = "martin.durant@alumni.utoronto.ca"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering",
]


dependencies = [
  "fsspec",
  "numcodecs<=0.11",
  "numpy",
  "ujson",
  "zarr",
]

[project.optional-dependencies]
cftime = ["cftime"]
fits = ["xarray"]
hdf = ["h5py", "xarray"]
grib2 = ["cfgrib"]
netcdf3 = ["scipy"]
dev = [
    "cftime",
    "dask",
    "h5netcdf",
    "h5py",
    "jinja2",
    "mypy",
    "pytest",
    "s3fs",
    "types-ujson",
    "xarray",
    "xarray-datatree",
    "cfgrib",
    "scipy",
    "netcdf4"
]

[project.urls]
Documentation = "https://fsspec.github.io/kerchunk"
issue-tracker = "https://github.com/fsspec/kerchunk/issues"
source-code = "https://github.com/fsspec/kerchunk"

[project.entry-points."numcodecs.codecs"]
grib = "kerchunk.codecs:GRIBCodec"
fill_hdf_strings = "kerchunk.codecs:FillStringsCodec"
FITSAscii = "kerchunk.codecs:AsciiTableCodec"
FITSVarBintable = "kerchunk.codecs:VarArrCodec"
record_member = "kerchunk.codecs:RecordArrayMember"

[project.entry-points."xarray.backends"]
kerchunk = "kerchunk.xarray_backend:KerchunkBackend"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[tool.setuptools]
packages = ["kerchunk"]

[tool.setuptools_scm]
fallback_version = "9999"
version_scheme = "post-release"
local_scheme = "no-local-version"
